--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "next",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.0.1",
+    "react-router-redirect": "^1.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
